--- a/public/stylesheets/sass/master.sass
+++ b/public/stylesheets/sass/master.sass
@@ -13,7 +13,6 @@ body
   :padding 10pt
   
 .post
-  :position relative
   :padding 5pt
   :margin 5pt
   :background-color #fff
@@ -23,11 +22,11 @@ body
 .post p
   :margin 0pt
   :margin-top 5pt
-  
+
+.body
+  :float left
+
 .created
-  :position absolute
-  :text-align right
   :font-weight bold
   :color #aaa
-  :right 5pt
-  :top 5pt
+  :float right
