--- a/public/stylesheets/sass/master.sass
+++ b/public/stylesheets/sass/master.sass
@@ -1,22 +1,40 @@
-!light_gray = #aaa
+!light_gray = #bbb
 !dark_gray = #333
 !white = #fff
 !medium_gray = #eee
+!crimson = #dc143c
 
 body
   :font-family Arial, sans-serif
   :font-size 12pt
   :background-color= !white
-  :margin-top 30pt
+  :margin-top 10pt
   :margin-left 30pt
   :margin-right 30pt
   :margin-botttom 30pt
   
+h1
+  :font-size 22pt
+  :color= !crimson
+  :margin-bottom 2pt
+  :margin-top 0pt
+
+h2
+  :font-size 15pt
+  :color= !light_gray
+  :margin-top 2pt
+  :margin-bottom 30pt
+  :font-weight normal
+
+h3
+  :margin-top 30pt
+  :font-size 100%
+
 .container
   :width 100%
   :background-color= !medium_gray
   :padding 10pt
-  
+ 
 .post
   :padding 5pt
   :margin 5pt
