--- a/app/views/shared/_post.html.haml
+++ b/app/views/shared/_post.html.haml
@@ -1,3 +1,3 @@
 .post{:id => "post-#{post.id}"}
   %p.body= h(post.body)
-  %p.created= h(post.created_at)
+  %p.created= relative_date(post.created_at)
