When creating new post prepend it in the view, don't append.
Fixes a problem in view ordering.

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,7 +2,7 @@
   function OnSuccess (responseText)
   {
     var element = $(responseText);
-    $('#posts').append(element);
+    $('#posts').prepend(element);
     element.hide ().show("slow");
   } 
 
