Refactoring: Fixing the css/haml a little.

--- a/public/stylesheets/sass/master.sass
+++ b/public/stylesheets/sass/master.sass
@@ -34,6 +34,7 @@ h3
   :width 100%
   :background-color= !medium_gray
   :padding 10pt
+  :margin auto
  
 .post
   :padding 5pt
@@ -41,7 +42,7 @@ h3
   :background-color= !white
   :color= !dark_gray
   :height 20pt
-  
+
 .post p
   :margin 0pt
   :margin-top 5pt
